--- a/mysite/app/templates/alumni_list.html
+++ b/mysite/app/templates/alumni_list.html
@@ -39,6 +39,7 @@
 </style>
 </head>
 <body>
+    {% include 'header.html' %}
 
 <h2>Alumni List</h2>
 
@@ -62,6 +63,6 @@
     </div>
 {% endfor %}
 
-
+{% include 'footer.html' %}
 </body>
 </html>
