--- a/mysite/app/templates/activities.html
+++ b/mysite/app/templates/activities.html
@@ -19,267 +19,60 @@
         <link rel="shortcut icon" href="img/favicon.png" />
         <link rel="apple-touch-icon" href="img/favicon.png" />
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
-        <link href="{% static 'css/theme.css' %}" rel="stylesheet">
+        <link href="{% static 'css/style.css' %}" rel="stylesheet">
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600&family=Libre+Baskerville&display=swap" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css?family=Material+Icons|Material+Icons+Outlined|Material+Icons+Two+Tone" rel="stylesheet">
         <link rel='stylesheet' href='https://use.fontawesome.com/releases/v5.7.0/css/all.css'>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
-      </head>
-      
-   
+   <style>
 
-</head>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>College Activities</title>
-    <style>
-        body {
-            font-family: 'Arial', sans-serif;
-            margin: 0;
-            padding: 0;
-            background-color: #ffcb05;
-        }
-
-        header {
-            background-color: #19195f;
-            color: #ffcb05;
-            padding: 10px;
-            text-align: center;
-        }
-
-        .activity-section {
-            padding: 20px;
-            margin: 20px;
-            background-color: #f8d753;
-            border-radius: 8px;
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-        }
-
-        h2 {
-            color: #333;
-        }
-
-        .activity-section img {
-            max-width: 100%;
-            height: auto;
-            border-radius: 8px;
-            margin-top: 10px;
-        }
-    </style>
-</head>
-<body>
-    <section class="container-fluid sticky-top bg-darkblue pt-2 pb-2">
-        <div class="col-sm-9 mx-auto">
-          <nav class="navbar navbar-expand-sm navbar-dark p-0">
-              <button class="navbar-toggler float-start p-0 border-0 lg-hide me-3 me-lg-0" type="button" data-bs-toggle="collapse" data-bs-target="#collapsibleNavbar">
-                <span class="material-icons float-start" style="font-size:30px">menu</span>
-              </button>
-              <a class="navbar-brand" href="#"><img src="{% static 'ssm-logo.png' %}" class="img-fluid logo"></a>
-              <a class="text-warning lg-hide" href="#"><span class="material-icons float-start">person</span></a>
-              <a class="text-warning lg-hide" href="#"><span class="material-icons-outlined float-end">search</span></a>
+    header {
+      background-color: #19195f;
+      color: #ffcb05;
+      padding: 10px;
+      text-align: center;
+    }
     
-              <div class="collapse navbar-collapse" id="collapsibleNavbar">
-                <ul class="navbar-nav ms-auto font-weight-bold text-uppercase">
-                  <li class="nav-item me-lg-3 "><a class="nav-link" href="{% url 'home' %}">Home</a></li>
-                  <li class="nav-item me-lg-3"><a class="nav-link" href="{% url 'member' %}">Membership</a></li>
-                  <li class="nav-item me-lg-3 active"><a class="nav-link" href="{% url 'activities' %}">Activities</a></li>
-                  <li class="nav-item me-lg-3"><a class="nav-link" href="#">About</a></li>
-                  <li class="nav-item me-lg-3"><a class="nav-link" href="#">Contact US</a></li>
-                  <li class="nav-item sm-hide"><a class="nav-link" href="#"><span class="material-icons-outlined float-end">search</span></a></li>
-                </ul>
-          </nav>
-        </div>
-      </section>    
+    .activity-section {
+      padding: 20px;
+      margin: 20px;
+      background-color: #f8d753;
+      border-radius: 8px;
+      box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    }
+    
+    
+    
+    .activity-section img {
+      max-width: 100%;
+      height: auto;
+      border-radius: 8px;
+      margin-top: 10px;
+    }
+   </style>
+   
+      </head>
+
+<body>
+  {% include 'header.html' %} 
 
     <header>
         <h1>College Activities</h1>
     </header>
 
+    {% for activities_post in activities_posts %}
     <section class="activity-section">
-        <h2>NSS (National Service Scheme)</h2>
-        <img src="https://ssmpoly.ac.in/source/Files/News%26Events/hashim%20award%20ww.jpg" alt="NSS Image">
-        <p>National Service Scheme is an Indian government-sponsored public service 
-            program under the ministry of youth affairs and sports, popularly known as NSS which 
-            was launched in 1969, focusing on the personality development of students through community service.
-             The NSS units of Seethi Sahib Memorial Polytechnic College, Tirur have contributed many innovative
-              technical projects to the society. Community service rendered by the two units [131&172] have taken 
-              several dimensions like adoption of villages for intensive development work, carrying out the medico-social service,
-               setting up of medical camps, programs for mass awareness, sanitation drives, adult education programs for weaker sections 
-               of the community, blood donation camps, reinstating damaged hospital equipments [Punarjjani], helping inmates at orphanages 
-               and the physically challenged. The units have also generously involved in fund raising programmes for the pain and palliative 
-               patients. The NSS units in SSMPC have also indulged in agricultural activities, thus creating a link between students and nature.</p>
+    <h2>{{activities_post.title}}</h2>
+    {% if activities_post.activities_photo %}
+          <img src="{{ activities_post.activities_photo.url }}" alt="{{ activities_post.title }} Photo" >
+      {% endif %}
+      <p>{{activities_post.text}}</p>
     </section>
+    {% endfor %}
 
-    <section class="activity-section">
-        <h2>NCC (National Cadet Corps)</h2>
-        <img src="https://ssmpoly.ac.in/source/Files/News%26Events/DSCF4651%20ww.jpg" alt="NCC Image">
-        <p>Motto <br><br>
-            <b>UNITY and DISCIPLINE</b><br><br>
-            
-            Aims<br><br>
-            To develop character, commandership, discipline, leadership, secular outlook, spirit of adventure and the ideas of selfless service of amongst the young of the countryTo create a human resource of organized trained and motivated youth to provide leadership in all walks of life and be always available for the service of the nation.To provide a suitable environment to motivate the youth to take-up a career in the armed forceThe national cadet corps is the Indian military cadet corps with its headquarters at New Delhi. Its formed on April 16th 1948.
-            <br>
-            it opened to school and college on voluntary based. During indo-pack war at 1965 and1948 NCC was second line of defense .NCC have an official song titled Him sib bharathey, it’s adopted in Oct 1983.Ncc has 17 directorate and it’s divided in to 788 units. And have 3 service groups’ army, naval, and air force
-            <br>
-            In our institution NCC is started about 30 years before under 29 Kerala battalion Kozhikode group. There are 107 NCC cadets having both SD and Sw and one NCC officer enrolled to our units .The Ex-NCC officers in our college are
-            <br><br>
-            1) Capt. Moidheenkutty<br>
-            2) Lt. Mohammedkutty (Late)<br>
-            3) Kunjimoidheen<br>
-            4) Major K Ameer Ali<br>
-            5) Lt. Abdul Majeed(Late) who are dedicated thier soul to NCC for a long years. Every year about 36 cadets passing and getting C certificate .<br><br>
-          <b>NCC Activities</b><br>
-            NCC activities in our institution has once again proved its credibility during the year under review .Training imparts to cadets according to syllabi and cadets were put through annual trig camps ALC,RDC,NIC and also special verities of activities which improve adventure among the youth .Time bond activates as follows.
-            <br><br>
-            <b>Enrolment</b><br>
-            Month: July<br><br>
-            
-            Every year NCC enrolment has to select new cadets to the first year of NCC. Selection Performa is based on the the students physical and general ability.It’s purely under control of Battalion and NCC officer.
-            <br><br>
-            <b>Independence Day</b><br>
-            Every year NCC opening ceremonial function and Independence Day is held on ague 15.our principal host the flag and also he give a message to the students. We will make a special NCC parade on that day and also distribute sweets all over the collage.
-            <br><br>
-            Annual trig camp<br>
-            Camps were organised in various parts of the state during the year each enrollment must at least 1 ACT in a year. These camps mainly improve leadership quality and teach a practical of meaning of our motto .From these camps cadets get chance to innovate their ideas and also they get a great lesson of time management. Usually these camps have 10 days training covering important lesson like weapon training, map reading, shooting, and leadership.
-            <br><br>
-            Army Attachment Camps<br>
-            Every year 10 cadets from our institution attending these camps. In these camp cadets were attached to army unit in order to give then the insight to the routine traning followed by combat forces and to obtain clear view of the latest sophisticated equipments using in armed force
-            <br><br>
-            Centrally organized camps<br>
-            It’s a special camp to make up the leadership quality. Every year one or two cadets from our institution attended in these camps like basic leadership camp and finally select to advanced leadership camp
-            <br><br>
-            National Integration camps<br>
-            In these national camps cadets from all directorate participate and mainly to improve cultural ability. In every year four cadets from our college should be selected to do NIC held at Punjab, Delhi, And also got several prizes in many program.
-            <br><br>
-            Trekking camps<br>
-            In every year two or three cadets from our college got chance to attend national trekking camp in out of states. Like nilagiri trekking, Assam, Kashmir covering distance of 100km .This camp build up physical and adventure skill; in cadet. Every year our college unit also conducting one day trekking in hill area like wayanadu, Palakkad, Munnar two or three staffs from the college also participate in these camps.
-            <br><br>
-            Guard of Horner<br>
-            Our unit has a permanent guard team and got several chance to give guard to well known great personalities like ADG,DG,GC,CO etc and also to ministers.
-            <br><br>
-            Social service activities<br>
-            NCC is being the prime youth movement in India is always in front in social service activities. The following statistics will reveal enthusiasm and efforts taken by NCC cadets
-            <br><br>
-            Blood Donation: Every year more than 50 cadets participated in blood donation camp conducted by group level and unit level<br><br>
-            
-            Tree plantation : about 100 sapling were planted every year<br><br>
-            
-            Aids awareness: participate in aids awareness camp.<br><br>
-            
-            Road safety awareness: our unit participates in road safety awareness camp and activities cooperating with road safety club in our campus during January every year.<br><br>
-            
-            Flag day collection: NCC cadets collect fund for widows and children of army soldiers who have died in various war and amount send to group. It is conducted on every year December 7th<br><br>
-            
-            NCC day celebration<br>
-            Every year our unit celebrate NCC day on Nov 24th with various types of programs and activities<br><br>
-            
-            Republic day 26th Jan<br>
-            Every year our chief unit celebrate republic day with varies programs .after flag hosting principal addressed the cadets and give massage cadets also conducts the special ceremonial parade and a film show also be there<br><br>
-            
-            Grace marks<br>
-            Every year cadets from polytechnic college got grace mark upto 5% in their academic subjects examination.<br><br>
-            
-            Certificate examination<br>
-            Our cadets attend B and C certificate examination conducted by NCC directorate every year and got certificate<br><br>
-            
-            Closing ceremony<br>
-            A closing ceremonial function conducted after B and C exam every year. A chief guest from battalion participates in this program. Also our principal and all head of section attend the program<br><br>
-            
-            Conclusions<br>
-            I consider it a matter of great Horner to have been appointed as the NCC Officer of our polytechnic college. It gives me great pleasure to extend my warm greeting and felicitation to all cadets , PI staffs ,Our principal and all staff of polytechnic college. I am also hopeful that the NCC will be accorded a higher priority in the state so that we can attract the best of youth. I am express my all greeting to all who supported me for these success.</p>
-    </section>
-
-    <section class="activity-section">
-        <h2>IEDC (Innovation and Entrepreneurship Development Cell)</h2>
-        <img src="{% static 'iedc_image.jpg' %}" alt="IEDC Image">
-        <p>New Generation Innovation and Entrepreneurship Development Centre (NewGen IEDC) is the programme launched by National Science and Technology Entrepreneurship Development Board (NSTEDB),<br>
-            Department of Science & Technology (DST), Government of India. NewGen IEDC will aim to inculcate the spirit of innovation and entrepreneurship amongst the young S&T students, encourage and support start-up creation through guidance, mentorship and support.
-            The programme will be implemented in academic institutions. Students will be encouraged to take up innovative projects with possibility of commercialization.
-            NewGen IEDCs would also spread the message of entrepreneurship and create a culture of entrepreneurship in the Host Institution (HI). <br>
-            With faculty already trained in the nuances of entrepreneurship, the presence of NewGen IEDCs in HI would create a vibrant entrepreneurial culture amongst the students. Few amongst the “Job-Seekers” would be converted to “JobGenerators” through the entrepreneurial route.</p>
-    </section>
-
-    <section class="activity-section">
-        <h2>Arts Clubs</h2>
-        <img src="{% static 'arts_club_image.jpg' %}" alt="Arts Club Image">
-        <p>Description about Arts Clubs activities goes here...</p>
-    </section>
-
-</body>
-</html>
-
-    </section>
-
-    <section class="activity-section">
-        <h2>IEDC (Innovation and Entrepreneurship Development Cell)</h2>
-        <img src="{% static 'iedc_image.jpg' %}" alt="IEDC Image">
-        <p>Description about IEDC activities goes here...</p>
-    </section>
-
-    <section class="activity-section">
-        <h2>Arts Clubs</h2>
-        <img src="{% static 'arts_club_image.jpg' %}" alt="Arts Club Image">
-        <p>Description about Arts Clubs activities goes here...</p>
-    </section>
-    <section class="container-fluid pt-5 pb-3 bg-darkblue text-white">
-        <div class="col-sm-9 mx-auto">
-      
-          <div class="row m-0 align-items-center">
-      
-            <div class="col-sm-12 text-center mb-5">
-              <h4 class="mb-3">Follow Us</h4>
-              <div class="table-responsive">
-                <ul class="nav justify-content-center">
-                  <li class="nav-item">
-                    <a class="nav-link text-white-50" href="#" target="_blank">
-                      <i class="fab fa-facebook-f" style="font-size:28px"></i>
-                    </a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link text-white-50" href="#" target="_blank">
-                      <i class="fab fa-twitter" style="font-size:28px"></i>
-                    </a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link text-white-50" href="#" target="_blank">
-                      <i class="fab fa-youtube" style="font-size:28px"></i>
-                    </a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link text-white-50" href="#" target="_blank">
-                      <i class="fab fa-instagram" style="font-size:28px"></i>
-                    </a>
-                  </li>
-                </ul>
-              </div>
-            </div>
-      
-            <div class="col-sm-8 mb-4">
-              <p class="mb-1"><span class="material-icons float-start me-3">call</span><a href="tel:" class="text-white-50 mb-2">8008474764</a></p>
-              <p class="mb-1"><span class="material-icons float-start me-3">mail</span><a href="mailto:" class="text-white-50 mb-2">ssmalumni@gmail.com</a></p>
-              <p class="text-white-50"><span class="material-icons text-white float-start mb-4 me-3">place</span>Alumni Center, SSM Polytechnic College, Malappuram - 676105</p>
-            </div>
-      
-      
-            <div class="col-sm-4 text-center text-lg-end mb-4">
-              <img src="{% static 'ssm-logo.png' %}" class="img-fluid logo">
-            </div>
-      
-            <div class="col-sm-6 text-center text-lg-start text-white-50">
-              <small>&copy; SSM Polytechnic College All rights reserved.</small>
-            </div>
-            
-            <div class="col-sm-6 text-center text-lg-end text-white-50">
-              <small>Powered by <a href="#" class="text-white-50">Corehub Solutions</a></small>
-            </div>
-          </div>
-          
-        </div>
-      </section>
+    {% include 'footer.html' %}
       
 </body>
 </html>
