--- a/mysite/app/templates/index.html
+++ b/mysite/app/templates/index.html
@@ -43,30 +43,9 @@
   </div>
 </section>
 
-  <section class="container-fluid sticky-top bg-darkblue pt-2 pb-2">
-    <div class="col-sm-9 mx-auto">
-      <nav class="navbar navbar-expand-sm navbar-dark p-0">
-          <button class="navbar-toggler float-start p-0 border-0 lg-hide me-3 me-lg-0" type="button" data-bs-toggle="collapse" data-bs-target="#collapsibleNavbar">
-            <span class="material-icons float-start" style="font-size:30px">menu</span>
-          </button>
-          <a class="navbar-brand" href="#"><img src="{% static 'ssm-logo.png' %}" class="img-fluid logo"></a>
-          <a class="text-warning lg-hide" href="#"><span class="material-icons float-start">person</span></a>
-          <a class="text-warning lg-hide" href="#"><span class="material-icons-outlined float-end">search</span></a>
+ 
 
-          <div class="collapse navbar-collapse" id="collapsibleNavbar">
-            <ul class="navbar-nav ms-auto font-weight-bold text-uppercase">
-              <li class="nav-item me-lg-3 active"><a class="nav-link" href="{% url 'activities' %}">Home</a></li>
-              <li class="nav-item me-lg-3"><a class="nav-link" href="{% url 'member' %}">Membership</a></li>
-              <li class="nav-item me-lg-3"><a class="nav-link" href="{% url 'activities' %}">Activities</a></li>
-              <li class="nav-item me-lg-3"><a class="nav-link" href="#">About</a></li>
-              <li class="nav-item me-lg-3"><a class="nav-link" href="#">Contact US</a></li>
-              <li class="nav-item sm-hide"><a class="nav-link" href="#"><span class="material-icons-outlined float-end">search</span></a></li>
-            </ul>
-      </nav>
-    </div>
-  </section>
-
-
+{% include 'header.html' %}
 
 
 <section class="container-fluid pt-4 pt-lg-5 pb-5 border-bottom">
@@ -479,63 +458,7 @@
   </div>
 </section>
 
-
-
-<section class="container-fluid pt-5 pb-3 bg-darkblue text-white">
-  <div class="col-sm-9 mx-auto">
-
-    <div class="row m-0 align-items-center">
-
-      <div class="col-sm-12 text-center mb-5">
-        <h4 class="mb-3">Follow Us</h4>
-        <div class="table-responsive">
-          <ul class="nav justify-content-center">
-            <li class="nav-item">
-              <a class="nav-link text-white-50" href="#" target="_blank">
-                <i class="fab fa-facebook-f" style="font-size:28px"></i>
-              </a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link text-white-50" href="#" target="_blank">
-                <i class="fab fa-twitter" style="font-size:28px"></i>
-              </a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link text-white-50" href="#" target="_blank">
-                <i class="fab fa-youtube" style="font-size:28px"></i>
-              </a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link text-white-50" href="#" target="_blank">
-                <i class="fab fa-instagram" style="font-size:28px"></i>
-              </a>
-            </li>
-          </ul>
-        </div>
-      </div>
-
-      <div class="col-sm-8 mb-4">
-        <p class="mb-1"><span class="material-icons float-start me-3">call</span><a href="tel:" class="text-white-50 mb-2">8008474764</a></p>
-        <p class="mb-1"><span class="material-icons float-start me-3">mail</span><a href="mailto:" class="text-white-50 mb-2">ssmalumni@gmail.com</a></p>
-        <p class="text-white-50"><span class="material-icons text-white float-start mb-4 me-3">place</span>Alumni Center, SSM Polytechnic College, Malappuram - 676105</p>
-      </div>
-
-
-      <div class="col-sm-4 text-center text-lg-end mb-4">
-        <img src="{% static 'ssm-logo.png' %}" class="img-fluid logo">
-      </div>
-
-      <div class="col-sm-6 text-center text-lg-start text-white-50">
-        <small>&copy; SSM Polytechnic College All rights reserved.</small>
-      </div>
-      
-      <div class="col-sm-6 text-center text-lg-end text-white-50">
-        <small>Powered by <a href="#" class="text-white-50">Corehub Solutions</a></small>
-      </div>
-    </div>
-    
-  </div>
-</section>
+{% include 'footer.html' %}
 
 </body>
 </html>
