--- a/mysite/app/templates/member.html
+++ b/mysite/app/templates/member.html
@@ -26,113 +26,79 @@
     body {
         background-color: #ffcb05 ;
     }
+    .container-form2 {
+      padding-top: 50px;
+     padding-bottom: 1000px;
+      width: 400px;
+      height: 740px;
+      margin: auto;
+      padding-left: 60px;
+      align-content: center;
+    background-color: #f8d753;
+    border-radius: 2%;
+    
+    }
+  
 </style>
 </head>
 
 <body>
-    <section class="container-fluid sticky-top bg-darkblue pt-2 pb-2">
-        <div class="col-sm-9 mx-auto">
-          <nav class="navbar navbar-expand-sm navbar-dark p-0">
-              <button class="navbar-toggler float-start p-0 border-0 lg-hide me-3 me-lg-0" type="button" data-bs-toggle="collapse" data-bs-target="#collapsibleNavbar">
-                <span class="material-icons float-start" style="font-size:30px">menu</span>
-              </button>
-              <a class="navbar-brand" href="#"><img src="{% static "ssm-logo.png" %}" class="img-fluid logo"></a>
-              <a class="text-warning lg-hide" href="#"><span class="material-icons float-start">person</span></a>
-              <a class="text-warning lg-hide" href="#"><span class="material-icons-outlined float-end">search</span></a>
-    
-              <div class="collapse navbar-collapse" id="collapsibleNavbar">
-                <ul class="navbar-nav ms-auto font-weight-bold text-uppercase">
-                  <li class="nav-item me-lg-3"><a class="nav-link" href="{% url 'home' %}">Home</a></li>
-                  <li class="nav-item me-lg-3 active"><a class="nav-link" href="{% url 'member' %}">Membership</a></li>
-                  <li class="nav-item me-lg-3"><a class="nav-link" href="{% url 'activities' %}">Activities</a></li>
-                  <li class="nav-item me-lg-3"><a class="nav-link" href="#">About</a></li>
-                  <li class="nav-item me-lg-3"><a class="nav-link" href="#">Contact US</a></li>
-                  <li class="nav-item sm-hide"><a class="nav-link" href="#"><span class="material-icons-outlined float-end">search</span></a></li>
-                </ul>
-          </nav>
+  {% include 'header.html' %}
+
         </div>
-        <img src="{% static 'media/auto.png' %}">
+        
       </section class="container-form">
       <div class="alumini-head">
         <h2 >Alumni Details Form</h2>
     </div>      
-      <form action="#" method="post" class="container-form2">
+    <div  class="container-form2">
+      <form action="#" method="post">
         
         <label for="name">Full Name:</label>
         <input type="text" id="name" name="name" required>
-    
-        <label for="email">Email:</label>
-        <input type="email" id="email" name="email" required>
+
+        <label for="name">Department:</label>
+        
+        <select name="department" id="id_department">
+            <option value="">Departments</option>
+            {% for department_key, department_label in DEPARTMENT_CHOICES %}
+                <option value="{{ department_key }}" {% if department_key == selected_department %}selected{% endif %}>{{ department_label }}</option>
+            {% endfor %}
+        </select>
+        
+  
     
         <label for="graduationYear">Graduation Year:</label>
         <input type="text" id="graduationYear" name="graduationYear" required>
     
-        <label for="degree">Degree Earned:</label>
-        <input type="text" id="degree" name="degree" required>
+        <label for="Contactmail">Contact email(optional):</label>
+        <input type="text" id="contactemail" name="contactemail" >
     
-        <label for="currentJob">Current Job:</label>
-        <input type="text" id="currentJob" name="currentJob" required>
-    
-        <label for="message">More about You:</label>
-        <textarea id="message" name="message" rows="4"></textarea>
+        <label for="Jobtitle:">Job title:</label>
+        <input type="text" id="jobtitle" name="jobtitle" required>
+
+        <label for="Linkedinprofile">Linkedin profile:</label>
+        <input type="text" id="linkedinprofile" name="Linkedin-profile" required>
+  
+            <!-- Industry dropdown -->
+    <label for="id_industry">Select Industry:</label>
+    <select name="industry" id="id_industry">
+        <option value="">All Industries</option>
+        {% for industry_key, industry_label in INDUSTRY_CHOICES %}
+            <option value="{{ industry_key }}" {% if industry_key == selected_industry %}selected{% endif %}>{{ industry_label }}</option>
+        {% endfor %}
+    </select>
+        <label for="picture">Choose profile picture:</label>
+    <input type="file" name="picture" id="picture" accept="image/*">
+
     <div class="submit-button">
         <button type="submit">Submit</button>
     </div>       
       </form>
-      </section>
-<br><br>
-<section class="container-fluid pt-5 pb-3 bg-darkblue text-white " >
-    <div class="col-sm-9 mx-auto"> 
-      <div class="row m-0 align-items-center">
-        <div class="col-sm-12 text-center mb-5">
-          <h4 class="mb-3">Follow Us</h4>
-          <div class="table-responsive">
-            <ul class="nav justify-content-center">
-              <li class="nav-item">
-                <a class="nav-link text-white-50" href="#" target="_blank">
-                  <i class="fab fa-facebook-f" style="font-size:28px"></i>
-                </a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link text-white-50" href="#" target="_blank">
-                  <i class="fab fa-twitter" style="font-size:28px"></i>
-                </a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link text-white-50" href="#" target="_blank">
-                  <i class="fab fa-youtube" style="font-size:28px"></i>
-                </a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link text-white-50" href="#" target="_blank">
-                  <i class="fab fa-instagram" style="font-size:28px"></i>
-                </a>
-              </li>
-            </ul>
-          </div>
-        </div>
-  
-        <div class="col-sm-8 mb-4">
-          <p class="mb-1"><span class="material-icons float-start me-3">call</span><a href="tel:" class="text-white-50 mb-2">8008474764</a></p>
-          <p class="mb-1"><span class="material-icons float-start me-3">mail</span><a href="mailto:" class="text-white-50 mb-2">ssmalumni@gmail.com</a></p>
-          <p class="text-white-50"><span class="material-icons text-white float-start mb-4 me-3">place</span>Alumni Center, SSM Polytechnic College, Malappuram - 676105</p>
-        </div>
-  
-  
-        <div class="col-sm-4 text-center text-lg-end mb-4">
-          <img src="{% static 'ssm-logo.png' %}" class="img-fluid logo">
-        </div>
-  
-        <div class="col-sm-6 text-center text-lg-start text-white-50">
-          <small>&copy; SSM Polytechnic College All rights reserved.</small>
-        </div>
-        
-        <div class="col-sm-6 text-center text-lg-end text-white-50">
-          <small>Powered by <a href="#" class="text-white-50">Corehub Solutions</a></small>
-        </div>
-      </div>
-      
     </div>
-  </section>
+      </section>
+
+<br><br>
+{% include 'footer.html' %}
   
 </body>
